# glyph

./: .gitignore  Makefile  main.c  meson.build  stone_wall.jxl
.zed/: settings.json
glad/include/glad/: glad.h
glad/src/: glad.c
include/: glyph.h
scripts/: gen_key_definitions.py
src/: camera.c  glyph.c  glyph_internal.h  input.c  math.c  renderer.c  shaders.c
src/glyph/: camera.c  glyph.c  input.c  math.c  renderer.c  shaders.c  texture.c  window.c
src/glyph/shaders/: shader.vert
src/shaders/: shader.frag  shader.vert
src/ui/: ui.c
src/ui/shaders/: shader.frag  shader.vert
